dns/pihole/service-dns.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole-dns
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.100.1
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name : dns-tcp
      protocol: TCP
      port: 53
      targetPort: dns-tcp
    - name : dns-udp
      protocol: UDP
      port: 53
      targetPort: dns-udp
