dns/pihole/ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-private
spec:
  ingressClassName: private
  rules:
    - host: pihole.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-http
                port:
                  name: http
